--- a/templates/_directory.twig
+++ b/templates/_directory.twig
@@ -1,4 +1,8 @@
-
-<td><i class="fa fa-fw fa-folder"></i> <a href="{{ base ~ '/' ~ dir.relativePathname }}">{{ dir.filename }}</a></td>
+{#
+ # Passed in variables:
+ #   base — The Base URL for the directory containing this directory
+ #   dir  — An SplFileInfo object representing a directory
+ #}
+<td><i class="fa fa-fw fa-folder"></i> <a href="{{ base ~ '/' ~ dir.relativePathname }}">{{ dir.dirname }}</a></td>
 <td class="text-right"></td>
 <td class="text-right">{{ dir.mtime|date('Y-m-d h:m:s') }}</td>
