--- a/templates/_file.twig
+++ b/templates/_file.twig
@@ -1,5 +1,8 @@
-
-
-<td>{{ file.filename }}</td>
+{#
+ # Passed in variables:
+ #   base — The Base URL for the directory containing this file
+ #   file — An SplFileInfo object representing a file
+ #}
+<td><i class="fa fa-fw fa-folder"></i> <a href="{{ base ~ '/' ~ file.relativePathname }}">{{ file.filename }}</a></td>
 <td class="text-right">{{ file.size }}</td>
 <td class="text-right">{{ file.mtime|date('Y-m-d h:m:s') }}</td>
