Add parent directory name

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -9,6 +9,7 @@
  #   directories — An array of SplFileInfo objects for directories in this directory
  #   files       — An array of SplFileInfo objects for files in this directory
  #   base        — The Base URL for the directory containing this file
+ #   parent_dir  — Parent directory
  #}
 {% extends templates.parent %}
 
@@ -23,6 +24,13 @@
                 </tr>
                 </thead>
                 <tbody>
+                {% if parent_dir %}
+                    <tr>
+                        <td><i class="fa fa-fw fa-folder"></i> <a href="{{ parent_dir|e('html') }}">..</a></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                {% endif %}
                 {% for dir in directories %}
                     <tr>
                         {{- include(templates.directory) -}}
