Change "Date" to "Last Modified"

--- a/templates/_header.twig
+++ b/templates/_header.twig
@@ -1,4 +1,4 @@
 
 <th  class="text-center" width="200">Name</th>
 <th class="text-center" width="150">Size</th>
-<th class="text-center" width="150">Date</th>
+<th class="text-center" width="150">Last Modified</th>
