--- a/templates/_directory.twig
+++ b/templates/_directory.twig
@@ -5,4 +5,4 @@
  #}
 <td><i class="fa fa-fw fa-folder"></i> <a href="{{ base ~ '/' ~ dir.relativePathname|e('html') }}">{{ dir.basename }}</a></td>
 <td class="text-right"></td>
-<td class="text-right">{{ dir.mtime|date('Y-m-d h:m:s') }}</td>
+<td class="text-right"><time datetime="{{ dir.mtime|date('Y-m-d h:m:s') }}" title="{{ dir.mtime|date('Y-m-d h:m:s') }}">{{ dir.mtime|date('Y-m-d h:m:s') }}</time></td>
