Let CSS do the work on column headers

--- a/templates/_header.twig
+++ b/templates/_header.twig
@@ -1,4 +1,4 @@
 
-<th  class="text-center" width="200">Name</th>
-<th class="text-center" width="150">Size</th>
-<th class="text-center" width="150">Last Modified</th>
+<th class="text-center browser-column-name">Name</th>
+<th class="text-center browser-column-size">Size</th>
+<th class="text-center browser-column-modified">Last Modified</th>
